Add most descriptions

--- a/about.html
+++ b/about.html
@@ -67,60 +67,58 @@
     </div>
   </header>
 
-  <main>
-    <section class="container py-5 text-center">
-      <h1 class="display-4">Our Mission</h1>
+  <main class="text-justify">
+    <section class="container py-5">
+      <h1 class="display-4 text-center">Our Mission</h1>
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            Future Business Leaders of America–Phi Beta Lambda is the largest student business organization in the nation. The UC Berkeley chapter of FBLA–PBL aims to develop business leaders who care about making an impact in the world. To that end
-            goal, we serve these three stages of a member’s personal and professional development:
+            Future Business Leaders of America–Phi Beta Lambda is the largest student business organization in the nation. The UC Berkeley chapter of FBLA–PBL aims to develop well-rounded business leaders who care about making an impact in the world. To that end goal, we serve these three stages of a member’s personal and professional development:
           </p>
-          <div class="row">
-            <div class="col">
+          <div class="row text-center">
+            <div class="col-4">
               <img src="img/pillars/passion.png" class="pillar-img" alt="">
-              <p>Find your passion</p>
+              <p class="w-100">Find Your Passion</p>
             </div>
-            <div class="col">
+            <div class="col-4">
               <img src="img/pillars/skills.png" class="pillar-img" alt="">
-              <p>Hone your skills</p>
+              <p class="w-100">Hone Your Skills</p>
             </div>
-            <div class="col">
+            <div class="col-4">
               <img src="img/pillars/trophy.png" class="pillar-img" alt="">
-              <p>Build a winning profile</p>
+              <p class="w-100">Build a Winning Profile</p>
             </div>
           </div>
-          <p>The purpose of FBLA-PBL is to provide additional opportunities for college students in business, business-related fields, and/or other majors to develop vocational and career-supportive competencies for business and office occupations
-            and business-teacher education.The mission of PBL is to bring business and education together in a positive working relationship through innovative leadership and career development programs. We bring our mission to life through the
-            application of our motto: Service, Education, and Progress.
+          <p>Berkeley PBL strives to provide members with a comprehensive and dynamic learning experience, building the necessary technical and interpersonal skillset to succeed in wide range of business pursuits and intersections before gaining hands-on professional experience through our various consulting projects.
           </p>
         </div>
       </div>
     </section>
     <hr>
-    <section class="container py-5 text-center">
-      <h1 class="display-4">Our Values</h1>
+    <section class="container py-5">
+      <h1 class="display-4 text-center">Our Values</h1>
       <div class="row">
-        <div class="col-lg">
-          A
+        <div class="col-md-6 col-lg">
+          <h5 class="text-center">You Get What You Put In</h5>
+          <p>PBL members do not follow predetermined paths. Rather, we encourage you to define your own success, and how you achieve your goals. By providing you with the tools you need and endorsing a hands-on approach to learning, we enable you to own your projects. We want you to become leaders who think independently, inspired to maximize your potential. In PBL, you get what you put in, and our achievements are proof of that philosophy.</p>
         </div>
-        <div class="col-lg">
-          B
+        <div class="col-md-6 col-lg">
+          <h5 class="text-center">Small-Club Feel</h5>
+          <p>At its core, PBL is not a business, nor a non-profit organization. We understand that, while preparing for life after college is important, our short 4 years here are just as significant and precious. And PBL’s member-centric mission reflects that. Joining PBL isn’t merely being a member of another on-campus organization, but becoming part of a family. We may come together from different backgrounds, but we unite to celebrate each other's successes, learn from each other's mistakes, and push each other to achieve more.</p>
         </div>
-        <div class="col-lg">
-          C
+        <div class="col-md-6 col-lg">
+          <h5 class="text-center">Question the Status Quo</h5>
+          <p>We champion bold ideas. PBL holds a culture of innovation in high esteem, encouraging members to make an impact in both the organization and the real world. We not only welcome good ideas, but also complement them with our network and resources to help you turn your goals into reality. We attract people who challenge existing practices and constantly consider how to contribute and improve—people who go on together to leave an impact wherever they go.</p>
         </div>
-        <div class="col-lg">
-          D
-        </div>
-        <div class="col-lg">
-          E
+        <div class="col-md-6 col-lg">
+          <h5 class="text-center">Leave Your Legacy</h5>
+          <p>PBL fosters leaders who leave legacies. Given our fleeting time in college, we seek to inspire each other to leave a mark on our committees, the organization, and UC Berkeley as a whole. We strive for more than temporary solutions that cease when you leave. Instead, we choose to focus our efforts on leading projects with long-lasting impact, so we can walk away knowing we’ve made a concrete, sustainable difference.</p>
         </div>
       </div>
     </section>
     <hr>
-    <section class="container py-5 text-center">
-      <h1 class="display-4">Our Community</h1>
+    <section class="container py-5">
+      <h1 class="display-4 text-center">Our Community</h1>
       <div class="row vertical-center">
         <div class="col-md-6">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -146,34 +144,24 @@
           </div>
         </div>
         <div class="col-md">
-          Lorem ipsum dolor sit amet, cu nam putant iudicabit reprimique. Est an saepe latine temporibus, sit saepe electram intellegebat cu. No vel mollis regione. Vero honestatis appellantur ex sea, in dico habeo verterem vim, sed ea aliquip
-          commune.
-
-          Cum ut mutat efficiendi, eum stet noster percipitur ei. Te modo possim mea, at dignissim torquatos sit, detracto neglegentur concludaturque ei sea.
+          <p>With an intimate organizational structure and a semester filled with exciting social activities and outings, PBL's community is a family of diverse personalities and passions. Through a Big-Little mentorship program, social events planned by our Internal Networking committee, and our semesterly Member's Retreat, PBL welcomes its new members warmly while encouraging them to succeed professionally and personally.</p>
         </div>
       </div>
     </section>
     <hr>
-    <section class="container py-5 text-center">
-      <h1 class="display-4">Club Structure</h1>
+    <section class="container py-5">
+      <h1 class="display-4 text-center">Club Structure</h1>
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <p>At the UC Berkeley chapter, our distinguishing feature is our organizational structure. 5 project teams, known as committees, focus on different areas in business education, personal development, and media production. We pride ourselves
-            in
-            the diversity of perspectives of our members, through not only their specializations within PBL, but also beyond. Although we are a business organization, only about a third of our members major in business. Others come from a variety of
-            disciplines, from Computer Science to Theater & Performance Studies.
-
-            Our goal is to help every member develop personally and professionally. Apart from projects members will complete within their committees, the executive team organizes club-wide workshops and mentorship programs aimed at shaping members
-            into
-            impactful business leaders.</p>
+          <p>Five project teams, known as committees, focus on different fields and intersections of business and pursue engaging and challenging curriculums to foster well-rounded members. In addition, PBL offers its consulting services to a wide range of clients from Fortune 500 firms to budding start-ups through its Upper Division client teams. Apart from projects completed within committees, members also experience the Internal Curriculum, an engaging series of professional development workshops dedicated to preparing members for a successful career; and participate in mentorship programs aimed at providing specific guidance for members' interests</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row text-center">
         <div class="col-md-6 col-lg-4 mx-auto">
           <a href="committees.html#consulting" class="text-decoration-none text-dark">
             <img src="img/committee-icons/co.png" class="pillar-img invert-img" alt="Consulting">
             <h5>Consulting</h5>
-            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
               sit atqui.</p>
           </a>
         </div>
@@ -181,7 +169,7 @@
           <a href="committees.html#finance" class="text-decoration-none text-dark">
             <img src="img/committee-icons/fi.png" class="pillar-img invert-img" alt="Finance">
             <h5>Finance</h5>
-            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
               sit atqui.</p>
           </a>
         </div>
@@ -189,7 +177,7 @@
           <a href="committees.html#marketing" class="text-decoration-none text-dark">
             <img src="img/committee-icons/mk.png" class="pillar-img invert-img" alt="Marketing">
             <h5>Marketing</h5>
-            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
               sit atqui.</p>
           </a>
         </div>
@@ -197,7 +185,7 @@
           <a href="committees.html#technology" class="text-decoration-none text-dark">
             <img src="img/committee-icons/tc.png" class="pillar-img invert-img" alt="Technology">
             <h5>Technology</h5>
-            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
               sit atqui.</p>
           </a>
         </div>
@@ -205,7 +193,7 @@
           <a href="committees.html#visual-media" class="text-decoration-none text-dark">
             <img src="img/committee-icons/vm.png" class="pillar-img invert-img" alt="Visual Media">
             <h5>Visual Media</h5>
-            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
               sit atqui.</p>
           </a>
         </div>
@@ -213,7 +201,7 @@
           <a href="upper-division.html" class="text-decoration-none text-dark">
             <img src="img/committee-icons/ud.png" class="pillar-img invert-img" alt="Upper Division">
             <h5>Upper Division</h5>
-            <p>Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
+            <p class="text-justify text-md-center">Lorem ipsum dolor sit amet, eam ex summo zril legendos, eu omnium efficiantur usu. At duo impetus eleifend erroribus. Consul mucius expetenda usu in, ad iriure admodum mei. In per periculis patrioque, omnis mutat adversarium eu eam, ne
               sit atqui.</p>
           </a>
         </div>
