--- a/careers.html
+++ b/careers.html
@@ -72,6 +72,11 @@
       <h1 class="display-4">Where We've Worked</h1>
       <div class="row">
         <div class="col-lg-8 mx-auto">
+          <p>Our members and alumni, backed by their PBL experiences, pursue careers with industry leaders in a diverse array of fields from management consulting and investment banking to software engineering and product management.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
           <div class="d-inline-flex flex-wrap align-items-center justify-content-center py-3">
             <div class="logo">
               <a href="https://www.apple.com">
