--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            The UC Berkeley chapter of FBLA–PBL aims to develop business leaders who care about making an impact in the world.
+            Future Business Leaders of America-Phi Beta Lambda is the largest student business organization in the nation. Emphasizing a holistic and comprehensive approach to mastering business principles and practices, Berkeley Phi Beta Lambda provides members with the technical and interpersonal foundation needed to thrive as a business leader in today's dynamic world.
           </p>
           <a class="nav-link" href="about.html">
             <button type="button" class="btn btn-dark btn-lg m-1">About Us</button>
@@ -96,7 +96,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            The UC Berkeley chapter of FBLA–PBL aims to develop business leaders who care about making an impact in the world.
+            Berkley PBL's unique structure of being both a general business organization and consulting group allows for a compendious business education. Members undergo an industry-specific curriculum, building a foundation of technical skills and business acumen before joining one of our strategy consulting teams. In addition, members partake in our semester-long Internal Curriculum, an engaging series of professional development workshops in resume building, behavioral and technical interviews, case analysis, etc.
           </p>
           <a class="nav-link" href="committees.html">
             <button type="button" class="btn btn-dark btn-lg m-1">Committees</button>
@@ -110,10 +110,10 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p>
-            The UC Berkeley chapter of FBLA–PBL aims to develop business leaders who care about making an impact in the world.
+            Berkeley PBL brings together a diverse group of ambitious, inventive students, dedicated to helping one another succeed in all aspects of college life. Our members achieve professional accomplishments, whether in launching their own start-up or landing their dream internship, while finding their place in a welcoming community of friends, mentors, and alumni. From collaborating on impactful consulting projects to travelling abroad together, PBL members actively pursue professional and personal passions.
           </p>
-          <a class="nav-link" href="committees.html">
-            <button type="button" class="btn btn-dark btn-lg m-1">Button????</button>
+          <a class="nav-link" href="apply.html#timeline">
+            <button type="button" class="btn btn-dark btn-lg m-1">Events</button>
           </a>
         </div>
       </div>
