--- a/internal-networking.html
+++ b/internal-networking.html
@@ -73,11 +73,7 @@
         <div class="col-lg-8 mx-auto">
           <section class="committee">
             <h1 class="display-4 text-center">Leadership</h1>
-            <p class="pb-3">Lorem ipsum dolor sit amet, porro scripta prodesset ei per. Usu fugit soluta mediocrem ut. Vero oportere ut sit, lobortis liberavisse at nam. Mel nonumes graecis voluptatibus no. No vix meliore nusquam placerat, legendos
-              ocurreret
-              contentiones ex eam. Has detraxit assentior in.
-
-              Placerat tractatos omittantur ut est. Quo laoreet liberavisse at, ea qui veniam impedit. Ex verear iisque intellegat his. Ad sea suas natum, in sonet labitur vis. Eros hendrerit.
+            <p class="pb-3">While not a committee that takes applicants, the Internal Networking committee is responsible for fostering the social environment of the organization. From planning the semesterly Member's Retreat to organizing countless social events throughout the semester, the Internal Networking committee works hard to encourage a tight-knight PBL community.
             </p>
           </section>
         </div>
