--- a/apply.html
+++ b/apply.html
@@ -77,8 +77,8 @@
   </header>
 
   <main>
-    <section class="container py-5">
-      <h1 class="display-4 text-center">Recruitment Timeline</h1>
+    <section class="container">
+      <h1 class="display-4 text-center" id="timeline">Recruitment Timeline</h1>
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <ul class="list-unstyled timeline">
