Add committee bios

--- a/committees.html
+++ b/committees.html
@@ -93,11 +93,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Bradly Wei</h5>
                         <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hi! I’m Bradly Wei, a current freshman studying Data Science and Economics. I’m interested in using my knowledge to help businesses convert data into actionable strategy, especially through the involvement of technology and creative reasoning. In my free time, I love playing pickup basketball, reading the WSJ, and having late-night chats with friends. Apart from PBL, you can also find me helping local non-profits, doing legal research or taxes in Eshleman, or simply pursuing passion projects. </p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -110,11 +110,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
+                        <h5 class="h5">Erika Yang</h5>
                         <span class="h6 role">Consulting Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hi everyone! I’m Erika and I’m a sophomore intending to major in Economics and Education, whose interests lie in entrepreneurship and consulting. PBL has been an amazing organization where I have been able to develop these skills further and meet incredible people. Outside of PBL, I am passionate about my non-profit organization, YIBI. Beyond my professional life, I love to swim, run, and explore new food places!</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -135,11 +135,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Kaci Gu</h5>
+                        <span class="h6 role">Finance Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hello! I'm Kaci, a freshman studying Data Science and Economics. This will be my second semester in PBL. In my free time, I like working out by going on a hike, running, playing basketball, swimming, and hitting the gym.</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -152,11 +152,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Jackie Cai</h5>
+                        <span class="h6 role">Finance Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hi! I'm Jackie, a second year studying Economics and Global Studies. I am excited to come back for my third semester in PBL. PBL has helped me grow so much, and I have made some of my best friends in college in this organization. In my free time, I love travelling the world and finding unique cafes.</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -177,11 +177,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Justin Quan</h5>
+                        <span class="h6 role">Marketing Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hi! My name is Justin, and I’m a first-year studying Electrical Engineering and Computer Science with an interest in the intersection of marketing and technology as they relate to entrepreneurship. I love building and working with startups, along with exploring nature and hole-in-the-wall restaurants.</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -194,11 +194,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Abby Tan</h5>
+                        <span class="h6 role">Marketing Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hello! My name is Abby, and I am a second year majoring in Data Science and Economics. My professional interests include exploring the role of data within the marketing and consulting fields. Outside of school, I enjoy drinking too much caffeine, hanging out with friends, and attending concerts.</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -219,11 +219,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Emily Zhu</h5>
+                        <span class="h6 role">Technology Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hello! I’m Emily and I’m a fourth year Computer Science major. I’m excited to be spending my last semester in PBL in Tech, the same committee I started with during my first semester at Berkeley. In my free time, I enjoy bowling, climbing, and vlogging!</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -236,8 +236,8 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Angela Jiang</h5>
+                        <span class="h6 role">Technology Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
                         <p> Hello my name is Darren and I like making finger guns </p>
@@ -261,11 +261,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Grace Chi</h5>
+                        <span class="h6 role">Visual Media Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hello! My name is Grace, and I am a second year looking to major in Economics. My background in art provides me with a creative eye that translates well to my passion for taking business strategies to the next level with visual media. Beyond academics, you can find me exploring the streets of Berkeley or sketching in some corner at Peet’s.</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
@@ -278,11 +278,11 @@
                   <figcaption class="pb-3 mx-2 caption text-light">
                     <div class="">
                       <div class="bio-visible rounded-top py-3 px-1">
-                        <h5 class="h5">Darren Kim</h5>
-                        <span class="h6 role">Consulting Chair</span>
+                        <h5 class="h5">Dennis Pham</h5>
+                        <span class="h6 role">Visual Media Chair</span>
                       </div>
                       <div class="bio-hidden px-1">
-                        <p> Hello my name is Darren and I like making finger guns </p>
+                        <p>Hey everyone! I'm Dennis and I am a junior majoring in Business Administration with a focus on entertainment and creative marketing. Outside of school, I do a lot of cinematography work ranging from weddings, music videos, to commercials, in addition to doing freelance work for a variety of companies. I'm super excited for this upcoming semester and am looking forward to meeting you all!"</p>
                         <a class="text-light h4" href="https://www.linkedin.com/in/darrenkim21/"><i class="fab fa-linkedin"></i></a>
                       </div>
                     </div>
