--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
       <div class="row vertical-center">
         <div class="col-md-6">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
+            <div class="carousel-inner rounded">
               <div class="carousel-item active">
                 <img class="d-block w-100" src="img/DO1170320 (1).jpg">
               </div>
@@ -133,11 +133,11 @@
                 <img class="d-block w-100" src="img/IMG_9993-3.jpg">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a class="carousel-control-prev rounded-left" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a class="carousel-control-next rounded-right" href="#carouselExampleControls" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
